[gd_scene load_steps=7 format=3 uid="uid://buekevj4qymd5"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_1jrdl"]
[ext_resource type="Texture2D" uid="uid://d38ceuoo614k4" path="res://assets/bg.png" id="1_0866i"]
[ext_resource type="PackedScene" uid="uid://nregr806o8g0" path="res://scenes/bird.tscn" id="3_16v4r"]
[ext_resource type="PackedScene" uid="uid://doud7ceg8lsev" path="res://scenes/ground.tscn" id="4_nl1oj"]
[ext_resource type="PackedScene" uid="uid://p83ryllap0r5" path="res://scenes/pipe.tscn" id="5_nvcg3"]
[ext_resource type="PackedScene" uid="uid://pp2q0vxlxvwj" path="res://scenes/game_over.tscn" id="6_iv4pb"]

[node name="Game" type="Node"]
script = ExtResource("1_1jrdl")
pipe_scene = ExtResource("5_nvcg3")
ground_scene = ExtResource("4_nl1oj")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-1, -1)
texture = ExtResource("1_0866i")
offset = Vector2(432, 384)

[node name="Bird" parent="." instance=ExtResource("3_16v4r")]

[node name="Ground" parent="." instance=ExtResource("4_nl1oj")]
z_index = 1

[node name="Pipe" parent="." instance=ExtResource("5_nvcg3")]

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="ScoreLabel" type="Label" parent="."]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.5
offset_right = 34.5
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "SCORE: 0"

[node name="GameOver" parent="." instance=ExtResource("6_iv4pb")]

[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="restart" from="GameOver" to="." method="_on_game_over_restart"]
